company detail changes

--- a/app/views/dashboard/company_details.html.erb
+++ b/app/views/dashboard/company_details.html.erb
@@ -2,7 +2,6 @@
 ul.ui.horizontal.bulleted.list li::before, .ui.horizontal.bulleted.list > .item::before{
 color: white !important;
 }
-
 .ui.steps .step:after{
 border-style:hidden;
 position: relative;
@@ -11,14 +10,14 @@ position: relative;
 font-size: 1.5em;
 }
 .ui.steps{
-    border: 0px;
+border: 0px;
 }
 .ui.steps .step{
 border-right: 0px;
 }
 </style>
 <div class="ui grid" style="position:relative;background:cadetblue">
-    <div class="sixteen wide column" style="height:60px"></div>    
+    <div class="sixteen wide column" style="height:60px"></div>
     <div class="one wide column"></div>
     <div class="two wide column">
         <img src="/images/companies/delhivery_logo.png" style="padding:4px;max-height:120px">
@@ -39,7 +38,7 @@ border-right: 0px;
         </div>
     </div>
 </div>
-    <!-- new row -->
+<!-- new row -->
 <div class="ui grid segment" style="margin:0px;padding:0px">
     <div class="one wide column">
     </div>
@@ -62,12 +61,40 @@ border-right: 0px;
             <div class="step">
                 <i class="rupee icon"></i>
                 <div class="content">
-                    <div class="title">CTC per annum:</div>
+                    <div class="title">CTC</div>
                     <div class="description">15 - 30 LPA</div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 <!-- right company pannel -->
+<div class="container" style="position:absolute;z-index:10;top:30%;left:65%">
+    <div class="ui card">
+        <div class="content">
+            <div class="ui grid">
+                <div class="row">
+                    <div class="two wide"></div>
+                    <div class="fourteen wide column">
+                        <h3>
+                        Interested in this company?
+                        </h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="three wide column"></div>
+                    <div class="ten wide column">
+                        <button class="ui button green">I'm interested</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="content">
+            
+        </div>
+        <div class="content">
+            
+        </div>
+    </div>
+</div>
+<!--  -->
