company detail UI

--- a/app/views/dashboard/company_details.html.erb
+++ b/app/views/dashboard/company_details.html.erb
@@ -179,6 +179,10 @@ word-spacing: 2px;
                         <p>
                             Delhivery is India's leading ecommerce fulfillment company, where we use technology to drive supply chain solutions. Delhivery provides an array of products and services for online businesses including online channel integration services, sourcing, catalogue management, inventory management, multicity fulfillment, express shipping, same day delivery services, reverse logistics, offline payment collection and processing, customer support,social media engagement and channel analytics.
                         </p>
+                        <p>
+                            <br/>
+                            5 years into the industry, Delhivery handles over 250,000 shipments per day for over 100,000+ merchants, 25000 clients and 1800+ retailers across 350+ cities. We provide a modular set of ecommerce technologies and logistics solutions to over 6000+pincodes.
+                        </p>
                     </div>
                 </div>
             </div>
