--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,34 +1,4 @@
-<script type="text/javascript">
-// CampusConnect.Utilities.cards();
-</script>
-<div class="ui vertical inverted sidebar menu left overlay">
-  <div class="profile_pic">
-    <img src="/images/Thapar_Uni_logo.jpg" class="img-circle profile_img">
-    <span style="color:#fff">Thapar University</span>
-  </div>
-  <h4 class="ui horizontal divider header inverted">
-  <i class="tag icon left"></i>
-  Navigation
-  </h4>
-  <a class="item">
-    <i class="home icon"></i>
-    Home
-  </a>
-  <a class="item">
-    <i class="block layout icon"></i>
-    Topics
-  </a>
-  <a class="item">
-    <i class="smile icon"></i>
-    Friends
-  </a>
-  <a class="item">
-    <i class="calendar icon"></i>
-    History
-  </a>
-</div>
 <div class="main-content container" style="background-color:;padding-top:5%">
-
   <div class="pusher" style="">
     <div class="ui grid">
       <div class="four wide column verticalLine">
@@ -134,10 +104,10 @@ $('.ui.dropdown').dropdown({
 
 CampusConnect.Dashboard.cards();
 
-$('.more-location').click(function(){
-  CampusConnect.Dashboard.getFilterList("location");
-  $('.ui.modal').modal('show');
-})
+// $('.more-location').click(function(){
+//   CampusConnect.Dashboard.getFilterList("location");
+//   $('.ui.modal').modal('show');
+// })
 
 
 var content = [
