--- a/app/views/dashboard/company_details.html.erb
+++ b/app/views/dashboard/company_details.html.erb
@@ -1,3 +1,6 @@
+<script type="text/javascript">
+    CampusConnect.Dashboard.showCompanyDetails(<%=@op_id%>);
+</script>
 <style type="text/css">
 ul.ui.horizontal.bulleted.list li::before, .ui.horizontal.bulleted.list > .item::before{
 color: white !important;
@@ -25,168 +28,5 @@ word-spacing: 2px;
 }
 
 </style>
-<div class="ui grid" style="position:relative;background:cadetblue">
-    <div class="sixteen wide column" style="height:60px"></div>
-    <div class="one wide column"></div>
-    <div class="two wide column">
-        <img src="/images/companies/delhivery_logo.png" style="padding:4px;max-height:120px">
-    </div>
-    <div class="thirteen wide column">
-        <h1 style="color:white">Delhivery Corp pvt ltd</h1>
-        <h2 style="color:white;line-height:0px;font-size:17px;">Enabling Commerce</h2>
-        <div class="ui horizontal bulleted list" style="color:white;margin-top:10px;">
-            <p class="item">
-                Founded in: 2012
-            </p>
-            <p class="item">
-                Employees: 32100
-            </p>
-            <p class="item">
-                HeadQuater: Delhi
-            </p>
-        </div>
-    </div>
-</div>
-<!-- new row -->
-<div class="ui grid segment" style="margin:0px;padding:0px">
-    <div class="one wide column">
-    </div>
-    <div class="nine wide column" style="padding:0px">
-        <div class="ui steps">
-            <div class="step">
-                <i class="marker arrow icon"></i>
-                <div class="content">
-                    <div class="title">Location</div>
-                    <div class="description">Bangalore</div>
-                </div>
-            </div>
-            <div class="step">
-                <i class="users icon"></i>
-                <div class="content">
-                    <div class="title">No of openings</div>
-                    <div class="description">20</div>
-                </div>
-            </div>
-            <div class="step">
-                <i class="user outline icon"></i>
-                <div class="content">
-                    <div class="title">Position</div>
-                    <div class="description">Machine Learning Engineer</div>
-                </div>
-            </div>
-            <div class="step">
-                <i class="rupee icon"></i>
-                <div class="content">
-                    <div class="title">CTC</div>
-                    <div class="description">15 - 30 LPA</div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- right company pannel -->
-<div class="container" style="position:fixed;z-index:10;top:22%;left:72%;bottom:10%">
-    <div class="ui card">
-        <div class="content">
-            <div class="ui grid">
-                <div class="row">
-                    <div class="sixteen wide column">
-                        <center><h3>
-                        Interested in this company?
-                        </h3>
-                        </center>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="sixteen wide column">
-                        <center><button class="ui button green">I'm interested</button></center>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="content">
-            <h3>Company Links</h3>
-            <div class="ui grid">
-                <div class="two column row">
-                    <div class="column">
-                        <i class="external icon"></i>
-                        <a href="#">Website</a>
-                    </div>
-                    <div class="column">
-                        <i class="linkedin square icon"></i>
-                        <a href="#">LinkedIn</a>
-                    </div>
-                </div>
-            </div>
-            
-        </div>
-        <div class="content">
-            <h3>Funding information</h3>
-            <div class="ui bulleted list">
-                <div class="item">$85.0 Mn in Series D by Tiger Global Management</div>
-                <div class="item">$35.0 Mn in Series C by Multiples Alternate Asset Management</div>
-                <div class="item">$6.0 Mn in Series B by Nexus Venture Partners</div>
-                <div class="item">$1.5 Mn in Series A by Times Internet</div>
-            </div>
-        </div>
-<!--         <div class="content">
-            <h3>Our tech stack</h3>
-            <div class="ui label">java</div>
-            <div class="ui label">javascript</div>
-            <div class="ui label">python</div>
-            <div class="ui label">css3</div>
-            <div class="ui label">AngularJS</div>
-            <div class="ui label">Rapid Miner</div>
-            
-        </div> -->
-    </div>
-</div>
-<!--  -->
-<div class="ui container" id="center-pannel" style="positoin:relative">
-    <div class="ui grid">
-        <div class="ten wide column" style="height:30px;"></div>
-        <div class="twelve wide column">
-            <div class="ui grid">
-                <div class="one column row">
-                    <div class="column">
-                        <h3>Job Description</h3>
-                    </div>
-                    <div class="column">
-                        <div class="ui divider"></div>
-                    </div>
-                    <div class="column">
-                        <div class="ui list">
-                            <div class="item" style="font-size:initial">Job Title: <strong>Backened Developer</strong></div>
-                            <div class="item" style="font-size:initial">Job Location:<strong> Bangalore</strong></div>
-                            <div class="item" style="font-size:initial">Openings: <strong>20</strong> </div>
-                        </div>
-                    </div>
-                    <div class="column extra content">
-                        <br/>
-                        <p style="">
-                            We are seeking a candidate who will participate in all aspects of architecting and developing new and innovative applications. You will have the opportunity to work on cutting edge technology and new product development in an established company that is rapidly growing.
-                        </p>
-                    </div>
-                    <div class="column">
-                        <br/>
-                        <h3>About Delhivery</h3>                         
-                    </div>
-                    <div class="column">
-                        <div class="ui divider"></div>
-                    </div>
-                    <div class="column">
-                        <br/>
-                        <p>
-                            Delhivery is India's leading ecommerce fulfillment company, where we use technology to drive supply chain solutions. Delhivery provides an array of products and services for online businesses including online channel integration services, sourcing, catalogue management, inventory management, multicity fulfillment, express shipping, same day delivery services, reverse logistics, offline payment collection and processing, customer support,social media engagement and channel analytics.
-                        </p>
-                        <p>
-                            <br/>
-                            5 years into the industry, Delhivery handles over 250,000 shipments per day for over 100,000+ merchants, 25000 clients and 1800+ retailers across 350+ cities. We provide a modular set of ecommerce technologies and logistics solutions to over 6000+pincodes.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    
+<div id="company_detail_container">
 </div>
