--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -17,6 +17,7 @@
         <%= render 'layouts/header' %>
         <%= render :partial=>"campus_drives/departments_handlebar" %>
         <%= render :partial=>"dashboard/cards_handlebar" %>
+        <%= render :partial=>"dashboard/company_details_handlebar" %>
         <script type="text/javascript">
             CampusConnect.Utilities.init();
             CampusConnect.Dashboard.init();
