--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -74,7 +74,7 @@
             </div>
             <div class="right floated column">
               <div  class="sort-options " style="padding-left: 12%;">
-                <select class="ui dropdown" >
+                <select class="sort ui dropdown" >
                   <option value="">Sort by</option>
                   <option value="no_of_openings">No of openings</option>
                   <option value="rating">Rating</option>
@@ -96,7 +96,7 @@
   </div>
 </div>
 <script>
-$('.ui.dropdown').dropdown({
+$('.sort.ui.dropdown').dropdown({
     onChange: function(value, text, $selectedItem) {
       CampusConnect.Dashboard.sorted_cards(value);
     }
@@ -110,20 +110,4 @@ CampusConnect.Dashboard.cards();
 // })
 
 
-var content = [
-{
-title: 'Horse',
-description: 'An Animal'
-},
-{
-title: 'Cow',
-description: 'Another Animal'
-} ];
-$('.ui.search').search({
-source : content,
-searchFields: [
-'title'
-],
-searchFullText: false
-});
 </script>
