Search API for Search Bar

--- a/app/views/dashboard/_right_nav.html.erb
+++ b/app/views/dashboard/_right_nav.html.erb
@@ -12,7 +12,7 @@
     <div class="right menu">
       <div class="ui search" style="padding-top:15px;padding-right:50px;">
         <div class="ui icon input">
-          <input class="prompt" type="text" placeholder="Search here..." style="width:565px;">
+          <input class="prompt search-bar" type="text" placeholder="Search here..." style="width:565px;">
           <i class="search icon"></i>
         </div>
         <div class="results"></div>
