--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -109,5 +109,11 @@ CampusConnect.Dashboard.cards();
 //   $('.ui.modal').modal('show');
 // })
 
+$(".prompt.search-bar").keydown(function(event){
+    if (event.keyCode == 13) {            
+        var query = $(this).val();
+        CampusConnect.Dashboard.search_openings(query);
+    }
+})
 
 </script>
