Location and department filter UI changes

--- a/app/views/dashboard/_filters.html.erb
+++ b/app/views/dashboard/_filters.html.erb
@@ -3,71 +3,27 @@
 border-right:1px solid #ebebe0;
 }
 </style>
-<div class="filters" style="padding-top:1%;padding-left:45%;">
+<div class="filters" style="padding-top:1%;padding-left:45%; height: 97%">
 	<!-- <div class="verticalLine">a</div> -->
-	<h3>Location ( City )</h3>
-	<div class="ui list" style="padding-bottom:20px;">
-		<div class="item">
-			<div class="ui checkbox">
-				<input type="checkbox" name="example">
-				<label>Bangalore</label>
-			</div>
-		</div>
-		<div class="item">
-			<div class="ui checkbox">
-				<input type="checkbox" name="example">
-				<label>Hyderabad</label>
-			</div>
-		</div>
-		<div class="item">
-			<div class="ui checkbox">
-				<input type="checkbox" name="example">
-				<label>Delhi</label>
-			</div>
-		</div>
-		<div class="item">
-			<div class="ui checkbox">
-				<input type="checkbox" name="example">
-				<label>Mumbai</label>
-			</div>
-		</div>
-		<div class="item">
-			<div class="ui checkbox">
-				<input type="checkbox" name="example">
-				<label>Chennai</label>
-			</div>
-		</div>
-		<div class="item">
-			<a class="more-location">More..</a>
-		</div>
+	<div style=" font-size: 16px;
+    font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    line-height: 1.28571429em;
+    font-weight: bold; height: 25px">
+  	Location ( City )
+  </div>
+	<div id="filter_cities" class="ui list" style="margin: 2% 0 0 0;height: 45%;overflow: auto;">
 	</div>
-	<div class="ui divider"></div>
-	<h3>Department/Position </h3>
-	<div class="ui list">
-		<div class="item">
-			<div class="ui checkbox">
-				<input type="checkbox" name="example">
-				<label>Software Engineer </label>
-			</div>
-		</div>
-		<div class="item">
-			<div class="ui checkbox">
-				<input type="checkbox" name="example">
-				<label>Mechanical Engineer </label>
-			</div>
-		</div>
-		<div class="item">
-			<div class="ui checkbox">
-				<input type="checkbox" name="example">
-				<label>Human Resource</label>
-			</div>
-		</div>
-		<div class="item">
-			<a>More..</a>
-		</div>
+	<div class="ui divider" style="margin: 2% 0 2% 0;"></div>
+	<div style=" font-size: 16px;
+    font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    line-height: 1.28571429em;
+    font-weight: bold; height: 25px">
+  	Department/Position
+  </div>
+	<div id="filter_department" class="ui list" style="margin: 2% 0 0 0;height: 45%;overflow: auto;">
 	</div>
 </div>
 
 <div id="location-filter-container">
-	
+
 </div>
