--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -77,6 +77,7 @@ CampusConnect.Dashboard.cards();
 $(".prompt.search-bar").keydown(function(event){
     if (event.keyCode == 13) {
         var query = $(this).val();
+        window.history.pushState("object or string", "Title", "?q="+query);
         CampusConnect.Dashboard.search_openings(query);
     }
 })
