--- a/app/views/dashboard/_cities_department_handlebar.html.erb
+++ b/app/views/dashboard/_cities_department_handlebar.html.erb
@@ -2,7 +2,7 @@
   {{#each this}}
     <div class="item">
       <div class="ui checkbox">
-        <input type="checkbox" name="example">
+        <input type="checkbox" name="{{name}}">
         <label>{{name}}</label>
       </div>
     </div>
