--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -67,6 +67,10 @@ $('.sort.ui.dropdown').dropdown({
     }
 });
 
+$(".ui.checkbox").checkbox({"onChange": function(){
+  CampusConnect.Dashboard.addCityFilter();
+}})
+
 CampusConnect.Dashboard.cards();
 
 $(".prompt.search-bar").keydown(function(event){
