--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -68,7 +68,7 @@ $('.sort.ui.dropdown').dropdown({
 });
 
 $(".ui.checkbox").checkbox({"onChange": function(){
-  CampusConnect.Dashboard.addCityFilter();
+  CampusConnect.Dashboard.addFilter();
 }})
 
 CampusConnect.Dashboard.cards();
